2004-09-30  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-elf.exp: Add test for --target2=abs.
	* ld-arm/arm-target2-abs.d: New file.

2004-09-29  Alan Modra  <amodra@bigpond.net.au>

	* ld-pe/secrel1.s: Pad .rdata out to 16 byte boundary.
	* ld-pe/secrel.d: Adjust to suit.

2004-09-24  Alan Modra  <amodra@bigpond.net.au>

	* ld-elfvsb/elfvsb.exp: Remove file name from "undefined ref" string.

2004-09-22  Alan Modra  <amodra@bigpond.net.au>

	* ld-i386/tlsbin.rd: Update for changed segment map.
	* ld-i386/tlsnopic.rd: Likewise.
	* ld-i386/tlspic.rd: Likewise.
	* ld-powerpc/tlsexe.r: Likewise.
	* ld-powerpc/tlsexe32.r: Likewise.
	* ld-powerpc/tlsexetoc.r: Likewise.
	* ld-powerpc/tlsso.r: Likewise.
	* ld-powerpc/tlsso32.r: Likewise.
	* ld-powerpc/tlstocso.r: Likewise.
	* ld-s390/tlsbin.rd: Likewise.
	* ld-s390/tlsbin_64.rd: Likewise.
	* ld-s390/tlspic.rd: Likewise.
	* ld-s390/tlspic_64.rd: Likewise.
	* ld-sh/tlsbin-2.d: Likewise.
	* ld-sh/tlspic-2.d: Likewise.
	* ld-x86-64/tlsbin.rd: Likewise.
	* ld-x86-64/tlspic.rd: Likewise.

2004-09-22  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/overlay-size.d: Don't check .mbss lma.
	* ld-sh/sh64/mix1.xd: Update for changed .bss file offset.
	* ld-sh/sh64/shdl32.xd: Likewise.
	* ld-sh/sh64/shdl64.xd: Likewise.

2004-09-17  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-target1-{abs,rel}.d}: New files.
	* ld-arm/arm-target1.s: New file.
	* ld-arm/arm-target2-{,got-}rel.d: New files.
	* ld-arm/arm-target2.s: New file.
	* ld-arm/arm-rel31.d: New files.
	* ld-arm/arm-rel31.s: New files.
	* ld-arm/arm.ld: New file.
	* ld-arm/arm-elf.exp: Add new tests.

2004-09-07  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/hiddef1.d, ld-cris/hiddef1.s, ld-cris/hidrefgotplt1.s:
	New test.

2004-09-03  Tomer Levi  <Tomer.Levi@nsc.com>

	* ld-crx: New directory.
	* ld-crx/crx.exp: New test script.
	* ld-crx/crx.ld: New linker script.
	* ld-crx/reloc-abs32.s: New file.
	* ld-crx/reloc-abs32.d: Likewise.