@@ -80,12 +80,12 @@ Symbol table '\.dynsym' contains 22 entries:
  +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +11 
  +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +15 
  +[0-9]+: 0+10700 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
- +[0-9]+: 0+ +0 NOTYPE +GLOBAL DEFAULT +UND gd
+ +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND gd
  +[0-9]+: 0+60 +0 TLS +GLOBAL DEFAULT +8 le0
  +[0-9]+: 0+ +24 OBJECT +GLOBAL DEFAULT +UND __tls_get_addr
  +[0-9]+: 0+40 +0 TLS +GLOBAL DEFAULT +8 ld0
  +[0-9]+: 0+68 +0 TLS +GLOBAL DEFAULT +8 le1
- +[0-9]+: 0+ +0 NOTYPE +GLOBAL DEFAULT +UND ld
+ +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND ld
  +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +6 _start
  +[0-9]+: 0+50 +0 TLS +GLOBAL DEFAULT +8 ld2
  +[0-9]+: 0+48 +0 TLS +GLOBAL DEFAULT +8 ld1
@@ -125,12 +125,12 @@ Symbol table '\.symtab' contains 42 entries:
  +[0-9]+: 0+30 +0 TLS +LOCAL +DEFAULT +7 le5
  +[0-9]+: [0-9a-f]+ +0 NOTYPE +LOCAL +DEFAULT +6 \.__tls_get_addr
  +[0-9]+: 0+10700 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
- +[0-9]+: 0+ +0 NOTYPE +GLOBAL DEFAULT +UND gd
+ +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND gd
  +[0-9]+: 0+60 +0 TLS +GLOBAL DEFAULT +8 le0
  +[0-9]+: 0+ +24 OBJECT +GLOBAL DEFAULT +UND __tls_get_addr
  +[0-9]+: 0+40 +0 TLS +GLOBAL DEFAULT +8 ld0
  +[0-9]+: 0+68 +0 TLS +GLOBAL DEFAULT +8 le1
- +[0-9]+: 0+ +0 NOTYPE +GLOBAL DEFAULT +UND ld
+ +[0-9]+: 0+ +0 TLS +GLOBAL DEFAULT +UND ld
  +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +6 _start
  +[0-9]+: 0+50 +0 TLS +GLOBAL DEFAULT +8 ld2
  +[0-9]+: 0+48 +0 TLS +GLOBAL DEFAULT +8 ld1
